修复各种bug，添加示例实体，添加全局行为，添加命中事件Phase和命中类型差分